--- a/public/login.html
+++ b/public/login.html
@@ -17,6 +17,7 @@
       <button type="submit">Login</button>
     </form>
     <p>Forgot your password? <a href="reset.html">Reset it here</a></p>
+    <p>Register? <a href="index.html">Create a new account</a></p>
   </div>
   <script src="js/scripts.js"></script>
 </body>
